@@ -300,3 +300,4 @@
 
 	* Rewrite Eet_Data. Now you can do list/hash/array of strings and all
 	the test suite is passing.
+	* Add eet_data_node_decode_cipher and eet_data_node_read_cipher.
